--- a/src/features/item-list/component/style.scss
+++ b/src/features/item-list/component/style.scss
@@ -1,3 +1,5 @@
+@import '../../../style.scss';
+///////////////////////////////////
 
 .item-form-wrap {
     border-radius: 10px;
@@ -23,22 +25,30 @@
             width: 100%;
             margin: 10px 0;
             justify-content: space-around;
+        }
+    }
+}
 
-            button {
-                border: 0;
-                width: 100px;
-                height: 40px;
-                color: #fff;
-                font-size: 18px;
-                cursor: pointer;
-                background: #333;
-                border-radius: 5px;
-        
-                &:hover {
-                    border-radius: 5px;
-                    font-weight: bold;
-                }
-            }   
+.detail-wrap {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .cart {
+        width: 500px;
+        height: 200px;
+        display: flex;
+        padding: 10px;
+        flex-direction: column;
+        justify-content: space-around;
+        box-shadow: 0px 10px 76px rgba(27, 0, 70, 0.15);
+
+        & > div {
+            color: #333;
+            font-size: 18px;
+            font-weight: bold;
         }
     }
 }
