--- a/src/features/item-list/style.scss
+++ b/src/features/item-list/style.scss
@@ -7,7 +7,6 @@
 
     .rows-wrapper,header {
         & .column {
-            // flex: 1;
             display: flex;
             padding: 0 15px;
             align-items: center;
@@ -100,7 +99,7 @@
 
 
 .search-wrap {
-    width: 400px;
+    width: 100%;
     height: 40px;
     display: flex;
     margin: 10px 0;
@@ -115,8 +114,8 @@
         border-right: 2px solid #948888;
     }
 
-    input[type='search'] {
-        width : 100%;
+    input[type='text'] {
+        width : 50%;
         height: 40px;
         margin: 10px 0;
         border: 0;
@@ -124,9 +123,6 @@
         border-radius: 5px;
         padding-left: 50px;
         padding-right: 10px;
-        box-shadow: -1px 0px 8px 0px #948888;
-
-
-        
+        border: 1px solid #948888;
     }
 }
